# scraper-scrapy

./: .env  COMMANDS.md  FIRST_VERSION_RELEASE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3652a0091596_changed_the_product_model_name_to_text.py  a3c04a0d0da3_add_pg_trigram_search_indexes.py  cbd3a92794ed_add_image_url_and_discounted_price_to_.py  d8f91141732f_make_product_timestamps_timezone_aware.py
app/: db.py  main.py  models.py  sync_db.py  utils.py
app/celery/: celery_app.py
app/database/: db.py  models.py  sync_db.py
app/limiter/: rate_limiter.py
app/redis/: cache.py  config.py
app/routes/: products.py  scrape.py  suggestions.py
app/schemas/: schemas.py
app/tasks/: scrape_tasks.py
app/utils/: search_filter.py
scraper/: CMD.md  requirements.txt  scrapy.cfg
scraper/output/: ai_plus_mobiles.csv  apple_mobiles.csv  gadgetbyte.csv  gadgetbyte_mobiles.csv  honor_mobiles.csv  infinix_mobiles.csv  motorola_mobiles.csv  nothing_mobiles.csv  oneplus_mobiles.csv  oppo_mobiles.csv  poco_mobiles.csv  realme_mobiles.csv  samsung_mobiles.csv  tecno_mobiles.csv  vivo_mobiles.csv  xiaomi_mobiles.csv  zte_mobiles.csv
scraper/outputs/gadgetbyte/: gadgetbyte_mobiles.csv
scraper/outputs/hukut/: hukut_mobiles.csv  hukut_test.csv  mandu_test.csv  yontra_test.csv
scraper/outputs/yantra/: page_17.csv  yantra_mobiles.csv
scraper/price_comparison_nepal/: hukut_utils.py  items.py  middlewares.py  pipelines.py  settings.py  sources.py  test.py  utils.py  yantra_utils.py
scraper/price_comparison_nepal/spiders/: gadgetbyte.py  hukut.py  mobilemandu.py  yantra.py  yontra.py
scraper/price_comparison_nepal/utilities/: brand_extractor.py  hukut_utils.py  yantra_utils.py
scraper/test/gadgetbyte/: gadgetbyte_mobiles.csv
