[project]
name = "fastapi-scrapy-scraper"
version = "0.0.1"
description = "A robust web scraping solution built with Scrapy to efficiently extract, clean, and store data from target websites. Includes custom spiders, middleware for proxy rotation, and pipelines for data validation. Ideal for automated data collection and monitoring tasks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scrapy>=2.17.0",
    "scrapy-playwright>=0.0.48",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
